# CppSQL

./: CMakeLists.txt  README.md
cmake/: FindMYSQL.cmake
include/cppsql/: IDatabase.h  MySQLDatabase.h  MySQLResult.h  MySQLStatement.h  SQLiteDatabase.h  SQLiteStatement.h  SomeClass.h  errorcodes.h  misc.h  tools.h  version.h
src/: MySQLDatabase.cpp  MySQLResult.cpp  MySQLStatement.cpp  SQLiteDatabase.cpp  SQLiteStatement.cpp  SomeClass.cpp  errorcodes.cpp  main.cpp  misc.cpp  tools.cpp  version.cpp.in
src/python/: pythonmodule.cpp  setup.py.in
tests/include/cppsqltests/: testinputs.h
tests/src/: test_SomeClass.cpp  test_misc.cpp  test_tools.cpp  test_version.cpp  testinputs.cpp.in
